// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Typography snapshots > matches snapshot — body paragraph 1`] = `
<p
  class=""
>
  Body text
</p>
`;

exports[`Typography snapshots > matches snapshot — heading level 1 1`] = `
<h1
  class=""
  data-level="1"
>
  Heading 
  1
</h1>
`;

exports[`Typography snapshots > matches snapshot — heading level 2 1`] = `
<h2
  class=""
  data-level="2"
>
  Heading 
  2
</h2>
`;

exports[`Typography snapshots > matches snapshot — heading level 3 1`] = `
<h3
  class=""
  data-level="3"
>
  Heading 
  3
</h3>
`;

exports[`Typography snapshots > matches snapshot — heading level 4 1`] = `
<h4
  class=""
  data-level="4"
>
  Heading 
  4
</h4>
`;

exports[`Typography snapshots > matches snapshot — heading level 5 1`] = `
<h5
  class=""
  data-level="5"
>
  Heading 
  5
</h5>
`;

exports[`Typography snapshots > matches snapshot — heading level 6 1`] = `
<h6
  class=""
  data-level="6"
>
  Heading 
  6
</h6>
`;
